--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Node-RED PWA</title>
+
+  <!-- Manifest -->
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#317EFB">
 
@@ -14,31 +16,39 @@
       height: 100%;
       width: 100%;
       overflow: hidden;
+      font-family: Arial, sans-serif;
     }
+
     iframe {
       width: 100%;
       height: 100%;
       border: none;
     }
+
     #installBtn {
       position: fixed;
-      bottom: 10px;
-      right: 10px;
-      padding: 10px 20px;
+      bottom: 15px;
+      right: 15px;
+      padding: 12px 20px;
       background: #FF9800;
       color: white;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       cursor: pointer;
-      z-index: 100;
-      display: none;
+      font-size: 16px;
+      z-index: 999;
+      display: none; /* hidden by default */
     }
   </style>
 </head>
 <body>
+  <!-- Dashboard iframe -->
   <iframe id="dashboard" src=""></iframe>
+
+  <!-- Install button -->
   <button id="installBtn">⬇️ Install App</button>
 
+  <!-- Firebase -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
     import { getDatabase, ref, get, child } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
@@ -78,21 +88,24 @@
     loadDashboard();
   </script>
 
+  <!-- Service Worker + PWA Install -->
   <script>
-    // Service Worker registration
+    // Service Worker
     if ("serviceWorker" in navigator) {
       navigator.serviceWorker.register("service-worker.js")
         .then(() => console.log("✅ Service Worker registered"))
-        .catch(err => console.log("❌ Service Worker error:", err));
+        .catch(err => console.error("❌ Service Worker error:", err));
     }
 
-    // PWA Install Button
+    // PWA install button
     let deferredPrompt;
     const installBtn = document.getElementById("installBtn");
+
     window.addEventListener("beforeinstallprompt", (e) => {
+      console.log("📦 beforeinstallprompt fired!");
       e.preventDefault();
       deferredPrompt = e;
-      installBtn.style.display = "inline-block";
+      installBtn.style.display = "inline-block"; // show button
     });
 
     installBtn.addEventListener("click", async () => {
@@ -103,6 +116,15 @@
         console.log(`User response to install: ${outcome}`);
         deferredPrompt = null;
       }
+    });
+
+    // Optional: fallback if beforeinstallprompt doesn't fire
+    window.addEventListener("load", () => {
+      setTimeout(() => {
+        if (installBtn.style.display === "none") {
+          installBtn.style.display = "inline-block"; // force show for testing
+        }
+      }, 3000);
     });
   </script>
 </body>
