--- a/index.html
+++ b/index.html
@@ -1,203 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VSENA IOT</title>
-  <link rel="icon" href="assets/image1.png" type="image/png" />
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#317EFB">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>VSENA IOT</title>
+<link rel="icon" href="assets/image1.png" type="image/png" />
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#317EFB">
 
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      width: 100vw;
-      font-family: Arial, sans-serif;
-      overflow: hidden;
-    }
+<style>
+  html, body {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100vw;
+    font-family: Arial, sans-serif;
+    overflow: hidden;
+  }
 
-    /* Fade animation */
-    .fade {
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.5s ease-in-out;
-    }
+  /* Loader, EB OFF, iframe all fixed */
+  #loader, #ebOff, iframe {
+    position: fixed;
+    top:0; left:0;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 0.5s ease-in-out;
+  }
 
-    .fade.show {
-      opacity: 1;
-      pointer-events: all;
-    }
+  /* Loader animation */
+  #loader {
+    background: linear-gradient(-45deg, #6a11cb, #2575fc, #ff416c, #ff4b2b);
+    background-size: 400% 400%;
+    animation: gradientBG 8s ease infinite;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    z-index: 9999;
+    opacity: 1;
+  }
 
-    #loader, #ebOff, iframe {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      display: flex; /* keep layout for fade */
-      justify-content: center;
-      align-items: center;
-    }
+  @keyframes gradientBG {
+    0% {background-position:0% 50%;}
+    50% {background-position:100% 50%;}
+    100% {background-position:0% 50%;}
+  }
 
-    #loader {
-      background: linear-gradient(-45deg, #6a11cb, #2575fc, #ff416c, #ff4b2b);
-      background-size: 400% 400%;
-      animation: gradientBG 8s ease infinite;
-      color: white;
-      font-size: 26px;
-      font-weight: bold;
-      text-shadow: 1px 1px 5px rgba(0,0,0,0.3);
-      z-index: 2000;
-    }
+  /* EB OFF */
+  #ebOff {
+    background: #111;
+    color: #ff3c3c;
+    font-size: 32px;
+    font-weight: bold;
+    text-shadow: 2px 2px 8px #ff3c3c, -2px -2px 8px #ff3c3c;
+    z-index: 9999;
+    opacity: 0;
+    pointer-events: none;
+  }
 
-    @keyframes gradientBG {
-      0% {background-position: 0% 50%;}
-      50% {background-position: 100% 50%;}
-      100% {background-position: 0% 50%;}
-    }
+  /* Iframe */
+  iframe {
+    border: none;
+    z-index: 1;
+    opacity: 0;
+  }
 
-    #ebOff {
-      background: #111;
-      color: #ff3c3c;
-      font-size: 36px;
-      font-weight: bold;
-      letter-spacing: 2px;
-      text-shadow: 2px 2px 8px #ff3c3c, -2px -2px 8px #ff3c3c;
-      justify-content: center;
-      align-items: center;
-      z-index: 2000;
-    }
-
-    iframe {
-      border: none;
-      z-index: 1000;
-    }
-
-    #installBtn {
-      position: fixed;
-      bottom: 15px;
-      right: 15px;
-      padding: 12px 20px;
-      background: #ff6f61;
-      color: white;
-      border: none;
-      border-radius: 12px;
-      cursor: pointer;
-      font-size: 16px;
-      z-index: 3000;
-      display: none;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-      transition: transform 0.2s;
-    }
-
-    #installBtn:hover {
-      transform: scale(1.05);
-    }
-  </style>
+  /* PWA Install Button */
+  #installBtn {
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
+    padding: 12px 20px;
+    background: #ff6f61;
+    color: white;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    font-size: 16px;
+    z-index: 10000;
+    display: none;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+    transition: transform 0.2s;
+  }
+  #installBtn:hover { transform: scale(1.05); }
+</style>
 </head>
 <body>
-  <!-- Loader -->
-  <div id="loader" class="fade show" style="display:flex;">Loading dashboard...</div>
 
-  <!-- EB OFF fallback -->
-  <div id="ebOff" class="fade">⚡ EB OFF</div>
+<!-- Loader -->
+<div id="loader">Loading dashboard...</div>
 
-  <!-- Dashboard iframe -->
-  <iframe id="dashboard" class="fade"></iframe>
+<!-- EB OFF -->
+<div id="ebOff">⚡ EB OFF</div>
 
-  <!-- Install button -->
-  <button id="installBtn">⬇️ Install App</button>
+<!-- Dashboard iframe -->
+<iframe id="dashboard"></iframe>
 
-  <!-- Firebase -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-    import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+<!-- Install button -->
+<button id="installBtn">⬇️ Install App</button>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyD7Iv_rkzbL85nisC3DmPl3774YMQQ6FFM",
-      authDomain: "linknest-6e4c7.firebaseapp.com",
-      databaseURL: "https://linknest-6e4c7-default-rtdb.firebaseio.com",
-      projectId: "linknest-6e4c7",
-      storageBucket: "linknest-6e4c7.firebasestorage.app",
-      messagingSenderId: "464019230541",
-      appId: "1:464019230541:web:c980aa3f971092f53ab104"
-    };
+<!-- Firebase + Loader logic -->
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
 
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-    const iframe = document.getElementById("dashboard");
-    const loader = document.getElementById("loader");
-    const ebOff = document.getElementById("ebOff");
+const firebaseConfig = {
+  apiKey: "AIzaSyD7Iv_rkzbL85nisC3DmPl3774YMQQ6FFM",
+  authDomain: "linknest-6e4c7.firebaseapp.com",
+  databaseURL: "https://linknest-6e4c7-default-rtdb.firebaseio.com",
+  projectId: "linknest-6e4c7",
+  storageBucket: "linknest-6e4c7.firebasestorage.app",
+  messagingSenderId: "464019230541",
+  appId: "1:464019230541:web:c980aa3f971092f53ab104"
+};
 
-    const urlRef = ref(db, "urls/lastUrl");
+const app = initializeApp(firebaseConfig);
+const db = getDatabase(app);
+const iframe = document.getElementById("dashboard");
+const loader = document.getElementById("loader");
+const ebOff = document.getElementById("ebOff");
 
-    // Fade helper
-    function fadeIn(el) { el.classList.add("show"); }
-    function fadeOut(el) { el.classList.remove("show"); }
+const urlRef = ref(db, "urls/lastUrl");
 
-    // Real-time listener
-    onValue(urlRef, (snapshot) => {
-      if (snapshot.exists()) {
-        const url = snapshot.val().link;
-        if (url) {
-          fadeOut(ebOff);
+// Fade helpers
+function fadeIn(el){ el.style.opacity = 1; el.style.pointerEvents = 'all'; }
+function fadeOut(el){ el.style.opacity = 0; el.style.pointerEvents = 'none'; }
 
-          if (iframe.src !== url) {
-            iframe.src = url;
-            fadeOut(iframe);
-            fadeIn(loader);
+// Listen to Firebase in real-time
+onValue(urlRef, (snapshot) => {
+  if(snapshot.exists()){
+    const url = snapshot.val().link;
+    if(url){
+      fadeOut(ebOff);
+      if(iframe.src !== url){
+        // Delay iframe loading for mobile to show loader first
+        requestAnimationFrame(() => { iframe.src = url; });
+        fadeOut(iframe);
+        fadeIn(loader);
 
-            iframe.onload = () => {
-              fadeOut(loader);
-              fadeIn(iframe);
-            };
+        iframe.onload = () => {
+          fadeOut(loader);
+          fadeIn(iframe);
+        };
 
-            iframe.onerror = () => {
-              fadeOut(loader);
-              fadeOut(iframe);
-              fadeIn(ebOff);
-            };
-          }
-        } else {
+        iframe.onerror = () => {
           fadeOut(loader);
           fadeOut(iframe);
           fadeIn(ebOff);
-        }
-      } else {
-        fadeOut(loader);
-        fadeOut(iframe);
-        fadeIn(ebOff);
+        };
       }
-    });
-  </script>
-
-  <!-- Service Worker + PWA Install -->
-  <script>
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("service-worker.js")
-        .then(() => console.log("✅ Service Worker registered"))
-        .catch(err => console.error("❌ Service Worker error:", err));
+    } else {
+      fadeOut(loader);
+      fadeOut(iframe);
+      fadeIn(ebOff);
     }
+  } else {
+    fadeOut(loader);
+    fadeOut(iframe);
+    fadeIn(ebOff);
+  }
+});
+</script>
 
-    let deferredPrompt;
-    const installBtn = document.getElementById("installBtn");
+<!-- Service Worker + PWA Install -->
+<script>
+if("serviceWorker" in navigator){
+  navigator.serviceWorker.register("service-worker.js")
+    .then(()=>console.log("✅ Service Worker registered"))
+    .catch(err=>console.error("❌ Service Worker error:", err));
+}
 
-    window.addEventListener("beforeinstallprompt", (e) => {
-      e.preventDefault();
-      deferredPrompt = e;
-      installBtn.style.display = "inline-block";
-    });
+let deferredPrompt;
+const installBtn = document.getElementById("installBtn");
 
-    installBtn.addEventListener("click", async () => {
-      installBtn.style.display = "none";
-      if (deferredPrompt) {
-        deferredPrompt.prompt();
-        const { outcome } = await deferredPrompt.userChoice;
-        console.log(`User response to install: ${outcome}`);
-        deferredPrompt = null;
-      }
-    });
-  </script>
+window.addEventListener("beforeinstallprompt", e=>{
+  e.preventDefault();
+  deferredPrompt = e;
+  installBtn.style.display = "inline-block";
+});
+
+installBtn.addEventListener("click", async ()=>{
+  installBtn.style.display = "none";
+  if(deferredPrompt){
+    deferredPrompt.prompt();
+    const { outcome } = await deferredPrompt.userChoice;
+    console.log(`User response to install: ${outcome}`);
+    deferredPrompt = null;
+  }
+});
+</script>
+
 </body>
 </html>
